@@ -11,16 +11,20 @@ my $build = Module::Build->new(
 		"CGI::Simple::Cookie" => 0,
 		"HTTP::Response" => 0,
 		"Plack" => 0,
+		"Hash::MultiValue" => 0,
 		"Carp" => 0,
 		"File::Basename" => 0,
 		"Data::Dumper" => 0,
 		"Template" => 0,
 		"File::Spec" => 0,
 		"Class::Load" => 0,
+		"Plack::Middleware::Deflater" => 0,
 		"Plack::Middleware::MCCS" => 0,
 		"CSS::Minifier::XS" => 0,
 		"JavaScript::Minifier::XS" => 0,
-		"IO::Compress::Gzip" => 0
+		"IO::Compress::Gzip" => 0,
+		"Plack::Middleware::ReverseProxy" => 0,
+		"Plack::Middleware::ReverseProxyPath" => 0
 	},
 	build_requires => {
 		"Test::More" => 0
