@@ -12,10 +12,7 @@ lib/PSGI/Hector/Response/Raw.pm
 lib/PSGI/Hector/Response/TemplateToolkit.pm
 lib/PSGI/Hector/Session.pm
 lib/PSGI/Hector/Utils.pm
-Makefile.PL
 MANIFEST			This list of files
-META.json
-META.yml
 README
 script/hector_hello.psgi
 t/00_use.t
@@ -24,3 +21,6 @@ t/02_response_raw.t
 t/03_pod.t
 t/04_session.t
 t/05_request.t
+Makefile.PL
+META.yml
+META.json
