@@ -9,18 +9,22 @@ WriteMakefile
   'EXE_FILES' => [],
   'VERSION_FROM' => 'lib/PSGI/Hector.pm',
   'PREREQ_PM' => {
+                   'Plack::Middleware::ReverseProxyPath' => 0,
+                   'File::Spec' => 0,
+                   'Plack::Middleware::Deflater' => 0,
+                   'CSS::Minifier::XS' => 0,
+                   'Hash::MultiValue' => 0,
                    'Plack::Middleware::MCCS' => 0,
                    'Plack' => 0,
                    'IO::Compress::Gzip' => 0,
-                   'File::Spec' => 0,
                    'Data::Dumper' => 0,
                    'Class::Load' => 0,
+                   'Plack::Middleware::ReverseProxy' => 0,
                    'Template' => 0,
                    'Carp' => 0,
                    'Test::More' => 0,
                    'JavaScript::Minifier::XS' => 0,
                    'HTTP::Response' => 0,
-                   'CSS::Minifier::XS' => 0,
                    'CGI::Simple::Cookie' => 0,
                    'File::Basename' => 0
                  }
