@@ -23,20 +23,13 @@ use Carp;
 
 =head2 getThisUrl()
 
-	my $url = $m->getThisUrl();
-
-Returns the full URL for the current script, ignoring the query string if any.
+DEPRECATED please use getSiteUrl() instead.
 
 =cut
 
 ###########################################################
 sub getThisUrl{
-	my $self = shift;
-	my $url = $self->getSiteUrl();
-	my $env = $self->getEnv();
-	$env->{'REQUEST_URI'} =~ m/^([^\?]+)/;	#match everything up to the query string if any
-	$url .= $1;
-	return $url;
+	shift->getSiteUrl();
 }
 #########################################################
 
@@ -46,38 +39,14 @@ sub getThisUrl{
 
 	my $url = $m->getSiteUrl();
 
-Returns the site URL for the current script, This includes the protocol and host name only.
+Returns the full site URL for the current script.
 
 =cut
 
 ###########################################################
 sub getSiteUrl{
-	my $self = shift;
-	my $env = $self->getEnv();
-	my $proto = "http";
-	if(exists($env->{'HTTP_X_FORWARDED_PROTO'})){
-		$proto = $env->{'HTTP_X_FORWARDED_PROTO'};
-	}
-	elsif(exists($env->{'HTTPS'})){
-		$proto = "https";
-	}
-	my $url = $proto . "://";
-	if($env->{'HTTP_HOST'} =~ /^([^\:]+)(\:\d+|)$/){
-		$url .= $1;   #only want the hostname part
-		my $port = $env->{'HTTP_X_FORWARDED_PORT'} || $env->{'SERVER_PORT'};
-		if($port){	#will have to assume port 80 if we don't have this
-			if($proto eq "https" && $port != 443){        #add non default ssl port
-				$url .= ":" . $port;
-			}       
-			elsif($proto eq "http" && $port != 80){     #add non default plain port     
-				$url .= ":" . $port;
-			}
-		}
-	}
-	else{
-	   Confess("Invalid HTTP host header");
-	}
-	return $url;
+	my $request = shift->getRequest();
+	$request->base->as_string;
 }
 #############################################################################################################
 
