@@ -1,15 +1,15 @@
 use strict;
 use warnings;
 use Test::More;
-plan(tests => 11);
+plan(tests => 12);
 use lib qw(../lib lib);
 use PSGI::Hector;
 
 #setup our cgi environment
 my %env;
-$env{'SCRIPT_NAME'} = "test.cgi";
+$env{'SCRIPT_NAME'} = "/test.cgi";
 $env{'SERVER_NAME'} = "www.test.com";
-$env{'HTTP_HOST'} = "www.test.com";
+$env{'HTTP_HOST'} = "www.test.com:8080";
 $env{'HTTP_REFERER'} = "http://" . $env{'HTTP_HOST'};
 $env{'SERVER_PORT'} = 8080;
 $env{'REQUEST_URI'} = "/test.cgi";
@@ -40,25 +40,28 @@ isa_ok($session, "PSGI::Hector::Session");
 my $request = $h->getRequest();
 isa_ok($request, "PSGI::Hector::Request");
 
-#6 need to test getthisurl()
-is($h->getThisUrl(), "http://www.test.com:8080/test.cgi", "PSGI::Hector::Utils::getThisUrl()");
+#6
+is($h->getSiteUrl(), "http://www.test.com:8080/test.cgi", "PSGI::Hector::Utils::getSiteUrl()");
 
 #7
-is($h->getOption('debug'), 1, "PSGI::Hector::getOption()");
+is($h->getThisUrl(), "http://www.test.com:8080/test.cgi", "PSGI::Hector::Utils::getThisUrl()");
 
 #8
+is($h->getOption('debug'), 1, "PSGI::Hector::getOption()");
+
+#9
 {
 	my $env = $h->getEnv();
 	is($env{'REQUEST_METHOD'}, "GET", "PSGI::Hector::getEnv()");
 }
 
-#9
+#10
 is($h->getUrlForAction("someAction", "a=b&c=d"), "/someAction?a=b&c=d", "PSGI::Hector::getUrlForAction()");
 
-#10
-is($h->getFullUrlForAction("someAction", "a=b&c=d"), "http://www.test.com:8080/someAction?a=b&c=d", "PSGI::Hector::getFullUrlForAction()");
-
 #11
+is($h->getFullUrlForAction("someAction", "a=b&c=d"), "http://www.test.com:8080/test.cgi/someAction?a=b&c=d", "PSGI::Hector::getFullUrlForAction()");
+
+#12
 {
 	$h = PSGI::Hector->new($options, \%env);
 	my $response = $h->getResponse();
