@@ -1,3 +1,12 @@
+PSGI::Hector 1.4 -- 27/12/2014
+
+	Deprecated getThisUrl()
+	Correct URLs are served when behind a reverse proxy
+	Fixed failing test
+	Added missing dependency.
+	Updated docs.
+
+
 PSGI::Hector 1.3 -- 29/10/2014
 
 	Now supports GET/POST parameters with multiple values.
